# utf8pp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  biicode.cmake  biicode.conf
src/: CMakeLists.txt
src/conversion/: CMakeLists.txt  encoding_cast.cxx  encoding_cast.hxx
src/core/: CMakeLists.txt  iterator.cxx  iterator.hxx  string.cxx  string.hxx  types.hxx
test/: CMakeLists.txt  main.cxx
